# traning

./: .gitignore
20190420_tenka1_beginner/a/: main.cpp
20190420_tenka1_beginner/b/: main.cpp  run.sh
20190420_tenka1_beginner/d/: main.cpp
abc114a/: main.py
abc114b/: run.sh
abc117a/: main.cpp
abc118_a/: a.out  main.cpp
abc118_b/: a.out  main.cpp
aizu/: record.md
aizu/alds1_2_a/: main.cpp  run.sh
algorithm_quick_reference/dp/: main.cpp
algorithm_quick_reference/factorisation/: main.cpp
algorithm_quick_reference/heap/: Makefile  main.cpp
algorithm_quick_reference/linked_list/: main.cpp
algorithm_quick_reference/trie/: main.cpp  sample.cpp
at_coder/abc069a/: main.cpp
at_coder/abc069b/: main.cpp  run.sh
at_coder/abc081_a/: main.cpp
at_coder/abc081_b/: main.cpp
at_coder/abc083a/: main.cpp  run.sh
at_coder/abc083b/: main.cpp  run.sh
at_coder/abc087b/: main.cpp  run.sh
at_coder/abc114c/: main.cpp
at_coder/abc117b/: main.cpp  run.sh
at_coder/abc117c/: main.cpp
at_coder/abc118_c/: Makefile  main.cpp  readme.md  run.sh
at_coder/abc_052a/: main.cpp  run.sh
at_coder/utils/: main.cpp  main.go
begining_linux_programming/: files.md
begining_linux_programming/device_files/: Makefile  simple_file.c
c++/array_boundary_by_cycle_modulo/: main.cpp
c++/const_in_class/: main.cpp
c/binary_tree/src/: CMakeLists.txt  binary_tree.c  binary_tree.h
dbus/: readme.md
llvm/: main.cpp
reinforcement_learing/sutton/chapter03/: CMakeLists.txt  build.sh  grid.hpp  main.cpp
snipets/: estat_fetch_sample.sh
utils/: main.cpp
(+1023 files in other folders)
